Fixed pr issue Moved z-index to variables

--- a/src/components/shared/BasePopup/base.popup.module.scss
+++ b/src/components/shared/BasePopup/base.popup.module.scss
@@ -9,7 +9,7 @@
   height: 100vh;
   width: 100%;
 
-  z-index: 99;
+  z-index: $z-index-99;
 }
 
 .header {
